# transformers-lab

./: README.md
assignment2/: different_prefill.csv  different_prefill.py  graph1.py  graph2.py  no_kv.py  no_kv_times.csv  single_batch.csv  single_batch.py  uniform_prefill.csv  uniform_prefill.py
assignment3/section1/: computeintensity.py  gemm_perf.csv  plot_gemm.py  prof_gemmEx.cu
assignment3/section2/: attention_benchmark.py  flashattention_decode.py  flashattention_decode_matt.py  flashattention_prefill.py  flashattention_single_layer.py  llama_ois.py  prefill_attention_oi.py
assignment3/section3/: batch_size_results.csv  batch_size_results.json  decode_length_results.csv  decode_length_results.json  flashinfer_pipeline.py  prefill_length_results.csv  prefill_length_results.json
assignment4/Section1/: chunked_engine.py  continous_engine.py
assignment4/Section2/: helper.py  transformer-tp2.py  transformer-w3l1.py
host_GPU/: CMakeLists.txt  main.cu
rms_norm/matrix/: CMakeLists.txt
rms_norm/vector/: CMakeLists.txt
silu/CUDA/: CMakeLists.txt
